--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <body>
   <div>
     <p>Página en reparación.</p>
+
+    <!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hexpfqcx&nd=6&style=31" border="0" alt="visitor counter"></a>
+<!-- End of CuterCounter Code -->
   </div>
  </body>
 </html>
