--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div>
-    <p>Página en reparación.</p>
+    <p>Página en reparación. Contacto: goldominios@gmail.com</p>
 
     <!-- Start of CuterCounter Code -->
 <a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hexpfqcx&nd=6&style=31" border="0" alt="visitor counter"></a>
