--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 </head>
 <body>
   <div>
-    <p>Página en reparación. Contacto: goldominios@gmail.com</p>
+    <p>Este dominio está disponible para la venta.
+      <br>
+Este dominio ha sido registrado y se encuentra disponible para la venta. No es una página oficial ni está asociada a ninguna entidad bancaria. No intentar loguearse.
+      <br>
+Contacto: goldominios@gmail.com</p>
 
     <!-- Start of CuterCounter Code -->
 <a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hexpfqcx&nd=6&style=31" border="0" alt="visitor counter"></a>
