--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div>
     <p>Este dominio está disponible para la venta.
       <br>
-Este dominio ha sido registrado y se encuentra disponible para la venta. No es una página oficial ni está asociada a ninguna entidad bancaria. No intentar loguearse.
+Este dominio ha sido registrado y NO es una página oficial ni está asociada a ninguna entidad bancaria. No intentar loguearse.
       <br>
 Contacto: goldominios@gmail.com</p>
 
