--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Reemplaza FORM_ENDPOINT por tu endpoint de Formspree o similar, o deja vacío pa
           <button type="button" id="mailtoBtn" class="btn mutebtn">Enviar por mail</button>
         </div>
 
-        <p class="note">Si preferís, podés enviar un email directo a <strong>goldominios@gmail.com</strong> (reemplazá por tu mail real).</p>
+        <p class="note">Si preferís, podés enviar un email directo a <strong>goldominios@gmail.com</strong> </p>
 
         <div id="status" aria-live="polite" style="margin-top:8px"></div>
       </form>
@@ -151,3 +151,4 @@ Reemplaza FORM_ENDPOINT por tu endpoint de Formspree o similar, o deja vacío pa
   </script>
 </body>
 </html>
+
